--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -74,11 +74,19 @@
       }
     </script>
 
+
+
     <script>
       $(document).ready(function () {
-        
+        // var particle = Particles.init({
+        //   selector: 'background',
+        //   color: '#DA0463',
+        //   connectParticles: true
+        // })
       })
     </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/particlesjs/2.2.2/particles.min.js"></script>
 
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyA2Ai-yI3VqZ91sA2SZjRJzmC3HEu92nU4&libraries=places" defer></script>
   </body>
